Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="bienvenido-a-mi-web-de-proyectos-en-github-soy-cyberprax" class="anchor" href="#bienvenido-a-mi-web-de-proyectos-en-github-soy-cyberprax" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido a mi Web de proyectos en Github. Soy Cyberprax.</h3>
+<a id="bienvenido" class="anchor" href="#bienvenido" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido</h3>
+
+<p>Hola. Soy Cyberprax, y estás en mi web de proyectos en Github.</p>
       </section>
     </div>
 
