--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a id="bienvenido" class="anchor" href="#bienvenido" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido</h3>
 
-<p>Hola. Soy Cyberprax, y estás en mi web de proyectos en Github.</p>
+<p>Página Web de proyectos y pruebas de Cyberprax en Github.</p>
       </section>
     </div>
 
