Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Cyberprax.GitHub.io : PluginPrueba">
+    <meta name="description" content="Cyberprax.GitHub.io : Sitio web para proyectos de Cyberprax en Github">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Cyberprax">View on GitHub</a>
 
           <h1 id="project_title">Cyberprax.GitHub.io</h1>
-          <h2 id="project_tagline">PluginPrueba</h2>
+          <h2 id="project_tagline">Sitio web para proyectos de Cyberprax en Github</h2>
 
         </header>
     </div>
@@ -30,7 +30,7 @@
         <h3>
 <a id="bienvenido" class="anchor" href="#bienvenido" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido</h3>
 
-<p>Página Web de proyectos y pruebas de Cyberprax en Github.</p>
+<p>Página Web de proyectos y pruebas de Cyberprax en Github. </p>
       </section>
     </div>
 
