Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="bienvenido" class="anchor" href="#bienvenido" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido</h3>
+<a id="repositorios" class="anchor" href="#repositorios" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositorios</h3>
+
+<p><a href="https://github.com/Cyberprax/Cyberprax.github.io">https://github.com/Cyberprax/Cyberprax.github.io</a></p>
 
       <footer class="site-footer">
 
