--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </section>
 
     <section class="main-content">
-      <h3>
+      <p></p><div></div>
+
+<h3>
 <a id="repositorios" class="anchor" href="#repositorios" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositorios</h3>
 
 <p><a href="https://github.com/Cyberprax/Cyberprax.github.io">https://github.com/Cyberprax/Cyberprax.github.io</a></p>
